Add predictions for all images using EfficientDet

--- a/Benchmarktest/EfficientDetD7/EfficientDetD7.ipynb
+++ b/Benchmarktest/EfficientDetD7/EfficientDetD7.ipynb
@@ -72,10 +72,9 @@
         "  else:\n",
         "    image_data = tf.io.gfile.GFile(path, 'rb').read()\n",
         "    image = Image.open(BytesIO(image_data))\n",
-        "\n",
+        "    \n",
         "  (im_width, im_height) = image.size\n",
-        "  return np.array(image.getdata()).reshape(\n",
-        "      (1, im_height, im_width, 3)).astype(np.uint8)"
+        "  return np.array(image.getdata()).reshape((1, im_height, im_width, 3)).astype(np.uint8)"
       ]
     },
     {
@@ -210,7 +209,7 @@
         "id": "FTHsFjR6HNwb"
       },
       "source": [
-        "## Doing the inference\n",
+        "[link text](https://)## Doing the inference\n",
         "\n",
         "To do the inference we just need to call our TF Hub loaded model.\n",
         "\n",
@@ -234,8 +233,7 @@
         "\n",
         "# different object detection models have additional results\n",
         "# all of them are explained in the documentation\n",
-        "result = {key:value.numpy() for key,value in results.items()}\n",
-        "print(result.keys())"
+        "result = {key:value.numpy() for key,value in results.items()}"
       ]
     },
     {
@@ -264,11 +262,6 @@
         "label_id_offset = 0\n",
         "image_np_with_detections = image_np.copy()\n",
         "\n",
-        "# Use keypoints if available in detections\n",
-        "keypoints, keypoint_scores = None, None\n",
-        "if 'detection_keypoints' in result:\n",
-        "  keypoints = result['detection_keypoints'][0]\n",
-        "  keypoint_scores = result['detection_keypoint_scores'][0]\n",
         "\n",
         "viz_utils.visualize_boxes_and_labels_on_image_array(\n",
         "      image_np_with_detections[0],\n",
@@ -278,29 +271,168 @@
         "      category_index,\n",
         "      use_normalized_coordinates=True,\n",
         "      max_boxes_to_draw=200,\n",
-        "      min_score_thresh=.70,\n",
-        "      agnostic_mode=False,\n",
-        "      keypoints=keypoints,\n",
-        "      keypoint_scores=keypoint_scores,\n",
-        "      keypoint_edges=COCO17_HUMAN_POSE_KEYPOINTS)\n",
+        "      min_score_thresh=.25,\n",
+        "      agnostic_mode=False)\n",
+        "\n",
         "\n",
         "plt.figure(figsize=(18,12))\n",
         "plt.imshow(image_np_with_detections[0])\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Detect objects of all images in images directory"
+      ],
+      "metadata": {
+        "id": "YJdMYwEggXUB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "import cv2\n",
+        "\n",
+        "image_names = os.listdir(\"images\")\n",
+        "ncols = 3\n",
+        "nrows = math.ceil(len(image_names) / ncols)\n",
+        "figsize = [20, 20]\n",
+        "\n",
+        "print(f\"Cols: {ncols}; Rows: {nrows}\")\n",
+        "\n",
+        "fig, ax = plt.subplots(nrows=nrows, ncols=ncols, figsize=figsize)\n",
+        "\n",
+        "\n",
+        "for i, axi in enumerate(ax.flat):\n",
+        "  try:\n",
+        "    # Convert image to tensor\n",
+        "    full_size_image = cv2.imread(os.path.join(\"images\", image_names[i]))\n",
+        "    full_size_image = cv2.cvtColor(full_size_image, cv2.COLOR_BGR2RGB)\n",
+        "    \n",
+        "    image_np = cv2.resize(full_size_image, (224,224), interpolation=cv2.INTER_CUBIC)\n",
+        "    image_np = tf.expand_dims(image_np, axis=0)\n",
+        "    \n",
+        "    # Detect objects in images\n",
+        "    results = hub_model(image_np)\n",
+        "    result = {key:value.numpy() for key,value in results.items()}\n",
+        "\n",
+        "    label_id_offset = 0\n",
+        "    image_np_with_detections = np.array(image_np).copy()\n",
+        "\n",
+        "    # Draw bounding box \n",
+        "    viz_utils.visualize_boxes_and_labels_on_image_array(\n",
+        "        image_np_with_detections[0],\n",
+        "        result['detection_boxes'][0],\n",
+        "        (result['detection_classes'][0] + label_id_offset).astype(int),\n",
+        "        result['detection_scores'][0],\n",
+        "        category_index,\n",
+        "        use_normalized_coordinates=True,\n",
+        "        max_boxes_to_draw=200,\n",
+        "        min_score_thresh=.25,\n",
+        "        agnostic_mode=False)\n",
+        "    \n",
+        "    axi.imshow(image_np_with_detections[0])\n",
+        "  except:\n",
+        "    print(f\"Failed at iteration {i} of {len(ax.flat)}\")\n",
+        "    pass\n",
+        "  \n",
+        "\n",
+        "plt.tight_layout(True)\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "GzpMRc5bgWR7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Detect in Real-Time (only locally)"
+      ],
+      "metadata": {
+        "id": "D9RhGlvwcX4d"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cv2\n",
+        "\n",
+        "\n",
+        "cap = cv2.VideoCapture(0)"
+      ],
+      "metadata": {
+        "id": "1UqC2Bh0cW3X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "while True:\n",
+        "  ret, frame = cap.read()\n",
+        "\n",
+        "  (im_width, im_height) = frame.size\n",
+        "  image_np = np.array(frame.getdata()).reshape((1, im_height, im_width, 3)).astype(np.uint8)\n",
+        "\n",
+        "\n",
+        "  results = hub_model(image_np)\n",
+        "  result = {key:value.numpy() for key,value in results.items()}\n",
+        "\n",
+        "\n",
+        "  viz_utils.visualize_boxes_and_labels_on_image_array(\n",
+        "                image_np_with_detections,\n",
+        "                result['detection_boxes'],\n",
+        "                result['detection_classes']+label_id_offset,\n",
+        "                result['detection_scores'],\n",
+        "                category_index,\n",
+        "                use_normalized_coordinates=True,\n",
+        "                max_boxes_to_draw=5,\n",
+        "                min_score_thresh=.5,\n",
+        "                agnostic_mode=False)\n",
+        "\n",
+        "  cv2.imshow('object detection',  cv2.resize(image_np_with_detections, (800, 600)))\n",
+        "\n",
+        "  if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+        "        cap.release()\n",
+        "        break\n"
+      ],
+      "metadata": {
+        "id": "Ssg7g3kLdMy2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1KcBghHRf8xd"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
-      "collapsed_sections": [],
-      "name": "Object Detection Inference on TF 2 and TF Hub",
+      "collapsed_sections": [
+        "NKtD0IeclbL5",
+        "FTHsFjR6HNwb"
+      ],
       "private_outputs": true,
       "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "nbformat": 4,
   "nbformat_minor": 0
