Add attribution to code for multi capture

--- a/01_capture_images.ipynb
+++ b/01_capture_images.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4a17783",
+   "id": "549eaf10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5346d19d",
+   "id": "355ff613",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4de0619d",
+   "id": "a86f5544",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a25ed72",
+   "id": "1c824b5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1b2b937",
+   "id": "bc59ddc9",
    "metadata": {},
    "source": [
     "## Capture Images from a single camera"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9562fd76",
+   "id": "d9ffd3a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b1e8c23",
+   "id": "4e6398ab",
    "metadata": {},
    "source": [
     "## Capture Images from multiple cameras\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa9fa549",
+   "id": "a95e2ab0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8810a89b",
+   "id": "6d68b48a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a2dbff4",
+   "id": "4cb435bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,10 +139,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c5c2a63",
+   "id": "15bab91d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# From https://stackoverflow.com/a/68342818; Last retrieved: 15.11.2022\n",
     "from vidgear.gears import VideoGear\n",
     "\n",
     "# Get multiple video streams\n",
