Add devices of setup

--- a/01_capture_images.ipynb
+++ b/01_capture_images.ipynb
@@ -7,12 +7,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install opencv-python"
+    "# !pip install opencv-python\n",
+    "# !pip install k4a\n",
+    "# !pip install open3d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "355ff613",
    "metadata": {},
    "outputs": [],
@@ -20,12 +22,14 @@
     "import os\n",
     "import time\n",
     "import uuid\n",
-    "import cv2"
+    "import cv2\n",
+    "import numpy as np\n",
+    "# import k4a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a86f5544",
    "metadata": {},
    "outputs": [],
@@ -38,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1c824b5a",
    "metadata": {},
    "outputs": [],
@@ -62,11 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d9ffd3a8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 0: RGB Azure Kinect\n",
+    "# 2: Sony Alpha\n",
+    "\n",
     "cap = cv2.VideoCapture(0)\n",
     "\n",
     "while True:\n",
@@ -179,6 +186,106 @@
     "stream1.stop()\n",
     "stream2.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "34e91fa4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# From https://github.com/UnaNancyOwen/AzureKinectSample/blob/master/sample/python/depth.py\n",
+    "class kinect:\n",
+    "    # Kinect\n",
+    "    _device = None\n",
+    "    _capture = None\n",
+    "\n",
+    "    # Depth\n",
+    "    _depth_image = None\n",
+    "    _depth = None\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.initialize()\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        self.finalize()\n",
+    "\n",
+    "    def initialize(self):\n",
+    "        self.initialize_sensor()\n",
+    "\n",
+    "    def finalize(self):\n",
+    "        self.finalize_sensor()\n",
+    "\n",
+    "    def initialize_sensor(self):\n",
+    "        # Open Device\n",
+    "        self._device = k4a.Device.open()\n",
+    "\n",
+    "        # Start Cameras\n",
+    "        device_config = k4a.DeviceConfiguration(\n",
+    "            color_format=k4a.EImageFormat.COLOR_BGRA32,\n",
+    "            color_resolution=k4a.EColorResolution.RES_720P,\n",
+    "            depth_mode=k4a.EDepthMode.NFOV_UNBINNED,\n",
+    "            camera_fps=k4a.EFramesPerSecond.FPS_30,\n",
+    "            synchronized_images_only=True\n",
+    "        )\n",
+    "        status = self._device.start_cameras(device_config)\n",
+    "        if status != k4a.EStatus.SUCCEEDED:\n",
+    "            raise IOError(\"failed start cameras!\")\n",
+    "\n",
+    "    def finalize_sensor(self):\n",
+    "        # Stop Cameras\n",
+    "        self._device.stop_cameras()\n",
+    "\n",
+    "    def run(self):\n",
+    "        while True:\n",
+    "            self.update()\n",
+    "            self.draw()\n",
+    "            self.show()\n",
+    "\n",
+    "            key = cv2.waitKey(10)\n",
+    "            if key == ord('q'):\n",
+    "                break\n",
+    "\n",
+    "    def update(self):\n",
+    "        self.update_frame()\n",
+    "        self.update_depth()\n",
+    "\n",
+    "    def update_frame(self):\n",
+    "        # Capture Frame\n",
+    "        self._capture = self._device.get_capture(-1)\n",
+    "        if self._capture is None:\n",
+    "            raise IOError(\"failed get capture!\")\n",
+    "\n",
+    "    def update_depth(self):\n",
+    "        # Update Depth\n",
+    "        self._depth_image = self._capture.depth\n",
+    "\n",
+    "    def draw(self):\n",
+    "        self.draw_depth()\n",
+    "\n",
+    "    def draw_depth(self):\n",
+    "        # Draw Depth\n",
+    "        self._depth = self._depth_image.data\n",
+    "\n",
+    "    def show(self):\n",
+    "        self.show_depth()\n",
+    "\n",
+    "    def show_depth(self):\n",
+    "        # Scaling Depth\n",
+    "        self._depth = self._depth * (-255.0 / 5000.0) + 255.0\n",
+    "        self._depth = self._depth.astype(np.uint8)\n",
+    "\n",
+    "        # Show Depth\n",
+    "        cv2.imshow(\"depth\", self._depth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "319c3abe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -197,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
