Add code to partition data

--- a/02_augmentation.ipynb
+++ b/02_augmentation.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "b8cccfb8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import xml.etree.ElementTree as ET\n",
     "import albumentations as A\n",
-    "import os\n",
+    "import os, shut\n",
     "import numpy as np\n",
     "import cv2\n",
     "from matplotlib import pyplot as plt"
@@ -27,18 +27,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 15,
    "id": "c0599060",
    "metadata": {},
    "outputs": [],
    "source": [
-    "IMAGE_PATH = os.path.join(\"DataCollection\", \"images\")\n",
-    "LABEL_PATH = os.path.join(\"DataCollection\", \"labels\")"
+    "DATA_PATH = \"DataCollection\"\n",
+    "IMAGE_PATH = os.path.join(DATA_PATH, \"images\")\n",
+    "LABEL_PATH = os.path.join(DATA_PATH, \"labels\")\n",
+    "\n",
+    "TRAIN_PATH = os.path.join(DATA_PATH, 'train')\n",
+    "TEST_PATH = os.path.join(DATA_PATH, 'test')\n",
+    "VAL_PATH = os.path.join(DATA_PATH, 'val')\n",
+    "\n",
+    "TRAIN_SPLIT = 0.8\n",
+    "TEST_SPLIT = 0.1\n",
+    "VAL_SPLIT = 0.1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
    "id": "a3066965",
    "metadata": {},
    "outputs": [],
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "f977b851",
    "metadata": {},
    "outputs": [],
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "id": "4ddf65ea",
    "metadata": {},
    "outputs": [
@@ -106,7 +115,7 @@
        "([605, 226, 862, 362], 'glasses', 1280, 720)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,12 +151,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "id": "519e0b3b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def resize_image(img_arr, bboxes, class_labels, h = 224, w = 224):\n",
+    "# create resize transform pipeline\n",
+    "transform = A.Compose([\n",
+    "    A.Resize(height=224, width=224, always_apply=True),\n",
+    "    A.HorizontalFlip(p=0.5),\n",
+    "    A.RandomRotate90(p=0.25),\n",
+    "    A.RandomBrightnessContrast(p=0.2),\n",
+    "], bbox_params=A.BboxParams(format='pascal_voc', label_fields=['class_labels']))\n",
+    "\n",
+    "# Resize and transform image (i.e. rotate, brightness)\n",
+    "def resize_transform_image(img_arr, bboxes, class_labels):\n",
+    "    orig_img = img_arr.copy()\n",
     "    \"\"\"\n",
     "    :param img_arr: original image as a numpy array\n",
     "    :param bboxes: bboxes as numpy array where each row is 'x_min', 'y_min', 'x_max', 'y_max', \"class_id\"\n",
@@ -156,21 +175,54 @@
     "    :param w: resized weight dimension of image\n",
     "    :return: dictionary containing {image:transformed, bboxes:['x_min', 'y_min', 'x_max', 'y_max', \"class_id\"]}\n",
     "    \"\"\"\n",
-    "    # create resize transform pipeline\n",
-    "    transform = A.Compose([\n",
-    "        A.Resize(height=h, width=w, always_apply=True),\n",
-    "        A.HorizontalFlip(p=0.5),\n",
-    "        A.RandomBrightnessContrast(p=0.2),\n",
-    "    ], bbox_params=A.BboxParams(format='pascal_voc', label_fields=['class_labels']))\n",
     "\n",
-    "    transformed = transform(image=img_arr, bboxes=bboxes, class_labels=class_labels)\n",
+    "    return transform(image=orig_img, bboxes=bboxes, class_labels=class_labels)\n",
     "\n",
-    "    return transformed"
+    "\n",
+    "resize_transform = A.Compose([\n",
+    "    A.Resize(height=224, width=224, always_apply=True),\n",
+    "], bbox_params=A.BboxParams(format='pascal_voc', label_fields=['class_labels']))\n",
+    "\n",
+    "# Resize image without additional transformations\n",
+    "def resize_image(img_arr, bboxes, class_labels):\n",
+    "    orig_img = img_arr.copy()\n",
+    "    return resize_transform(image=orig_img, bboxes=bboxes, class_labels=class_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
+   "id": "d3e4dea2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def augment_image(resize_fun, new_image_name, image, coords, label):\n",
+    "    # Augment raw image\n",
+    "    transformed = resize_fun(train_img, [coords], [label])\n",
+    "\n",
+    "    # Save augmented image\n",
+    "    cv2.imwrite(os.path.join(path, 'aug', f\"{new_image_name}.jpg\"), cv2.cvtColor(transformed['image'], cv2.COLOR_BGR2RGB))\n",
+    "\n",
+    "    # Save augmented label\n",
+    "    annotation = {}\n",
+    "    annotation['bboxes'] = transformed['bboxes'][0]\n",
+    "    annotation['class'] = transformed['class_labels'][0]\n",
+    "\n",
+    "    with open(os.path.join(path, 'aug', f\"{new_image_name}.json\"), 'w') as f:\n",
+    "        json.dump(annotation, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "827acef8",
+   "metadata": {},
+   "source": [
+    "### Test augmentation on single image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "f5a8255b",
    "metadata": {},
    "outputs": [
@@ -209,17 +261,74 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d80bc3d8",
+   "cell_type": "markdown",
+   "id": "87e6e29f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Partition datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "27b6d100",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'shutil' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [26], line 35\u001b[0m\n\u001b[1;32m     32\u001b[0m             shutil\u001b[38;5;241m.\u001b[39mcopy(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(IMAGE_PATH, folder, file_name), VAL_PATH)\n\u001b[1;32m     33\u001b[0m             shutil\u001b[38;5;241m.\u001b[39mcopy(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(LABEL_PATH, folder, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile_name\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.xml\u001b[39m\u001b[38;5;124m\"\u001b[39m), VAL_PATH)\n\u001b[0;32m---> 35\u001b[0m \u001b[43mcreate_partition\u001b[49m\u001b[43m(\u001b[49m\u001b[43mIMAGE_PATH\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn [26], line 24\u001b[0m, in \u001b[0;36mcreate_partition\u001b[0;34m(image_path)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# Copy files and labels to train, test, val folders\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file_name \u001b[38;5;129;01min\u001b[39;00m X_train:\n\u001b[0;32m---> 24\u001b[0m     \u001b[43mshutil\u001b[49m\u001b[38;5;241m.\u001b[39mcopy(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(IMAGE_PATH, folder, file_name), TRAIN_PATH)\n\u001b[1;32m     25\u001b[0m     shutil\u001b[38;5;241m.\u001b[39mcopy(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(LABEL_PATH, folder, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile_name\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.xml\u001b[39m\u001b[38;5;124m\"\u001b[39m), TRAIN_PATH)\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file_name \u001b[38;5;129;01min\u001b[39;00m X_test:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'shutil' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Create train, test, val partition from our 3 classes (rock, paper, scissors)\n",
+    "def create_partition(image_path):\n",
+    "    for folder in os.listdir(image_path):\n",
+    "        if folder.startswith('.'):\n",
+    "            continue\n",
+    "        \n",
+    "        # Read images and labels from directory\n",
+    "        images = [image for image in os.listdir(os.path.join(IMAGE_PATH, folder)) if not image.startswith('.')]\n",
+    "        labels = [label for label in os.listdir(os.path.join(LABEL_PATH, folder)) if not label.startswith('.')]\n",
+    "        \n",
+    "        # Split into train test validation set. From: https://datascience.stackexchange.com/a/53161\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(images, labels, test_size=1 - TRAIN_SPLIT, random_state=1337)\n",
+    "        X_val, X_test, y_val, y_test = train_test_split(X_test, y_test, test_size=TEST_SPLIT / (TEST_SPLIT + VAL_SPLIT), random_state=1337)        \n",
+    "        \n",
+    "        # Create folder \n",
+    "        for folder_path in [TRAIN_PATH, TEST_PATH, VAL_PATH]:            \n",
+    "            if not os.path.exists(folder_path):\n",
+    "                os.mkdir(folder_path)\n",
+    "        \n",
+    "        # Copy files and labels to train, test, val folders\n",
+    "        for file_name in X_train:\n",
+    "            shutil.copy(os.path.join(IMAGE_PATH, folder, file_name), TRAIN_PATH)\n",
+    "            shutil.copy(os.path.join(LABEL_PATH, folder, f\"{file_name.split('.')[0]}.xml\"), TRAIN_PATH)\n",
+    "            \n",
+    "        for file_name in X_test:\n",
+    "            shutil.copy(os.path.join(IMAGE_PATH, folder, file_name), TEST_PATH)\n",
+    "            shutil.copy(os.path.join(LABEL_PATH, folder, f\"{file_name.split('.')[0]}.xml\"), TEST_PATH)\n",
+    "            \n",
+    "        for file_name in X_val:\n",
+    "            shutil.copy(os.path.join(IMAGE_PATH, folder, file_name), VAL_PATH)\n",
+    "            shutil.copy(os.path.join(LABEL_PATH, folder, f\"{file_name.split('.')[0]}.xml\"), VAL_PATH)\n",
+    "            \n",
+    "create_partition(IMAGE_PATH)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27b6d100",
+   "id": "96b86b74",
    "metadata": {},
    "outputs": [],
    "source": []
