Add code to augment train, test, val data

--- a/02_augmentation.ipynb
+++ b/02_augmentation.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "b8cccfb8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import xml.etree.ElementTree as ET\n",
     "import albumentations as A\n",
-    "import os, shut\n",
+    "import os, shutil\n",
     "import numpy as np\n",
     "import cv2\n",
     "from matplotlib import pyplot as plt"
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3e4dea2",
+   "id": "58d2a25f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "827acef8",
+   "id": "a3160b5f",
    "metadata": {},
    "source": [
     "### Test augmentation on single image"
@@ -262,31 +262,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87e6e29f",
+   "id": "3bb6a016",
    "metadata": {},
    "source": [
-    "### Partition datasets"
+    "### Partition data into train, test, val set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "27b6d100",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'shutil' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [26], line 35\u001b[0m\n\u001b[1;32m     32\u001b[0m             shutil\u001b[38;5;241m.\u001b[39mcopy(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(IMAGE_PATH, folder, file_name), VAL_PATH)\n\u001b[1;32m     33\u001b[0m             shutil\u001b[38;5;241m.\u001b[39mcopy(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(LABEL_PATH, folder, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile_name\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.xml\u001b[39m\u001b[38;5;124m\"\u001b[39m), VAL_PATH)\n\u001b[0;32m---> 35\u001b[0m \u001b[43mcreate_partition\u001b[49m\u001b[43m(\u001b[49m\u001b[43mIMAGE_PATH\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn [26], line 24\u001b[0m, in \u001b[0;36mcreate_partition\u001b[0;34m(image_path)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# Copy files and labels to train, test, val folders\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file_name \u001b[38;5;129;01min\u001b[39;00m X_train:\n\u001b[0;32m---> 24\u001b[0m     \u001b[43mshutil\u001b[49m\u001b[38;5;241m.\u001b[39mcopy(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(IMAGE_PATH, folder, file_name), TRAIN_PATH)\n\u001b[1;32m     25\u001b[0m     shutil\u001b[38;5;241m.\u001b[39mcopy(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(LABEL_PATH, folder, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile_name\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.xml\u001b[39m\u001b[38;5;124m\"\u001b[39m), TRAIN_PATH)\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file_name \u001b[38;5;129;01min\u001b[39;00m X_test:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'shutil' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -322,16 +309,48 @@
     "            shutil.copy(os.path.join(IMAGE_PATH, folder, file_name), VAL_PATH)\n",
     "            shutil.copy(os.path.join(LABEL_PATH, folder, f\"{file_name.split('.')[0]}.xml\"), VAL_PATH)\n",
     "            \n",
-    "create_partition(IMAGE_PATH)"
+    "#create_partition(IMAGE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e1fad44",
+   "metadata": {},
+   "source": [
+    "### Augment both images and labels\n",
+    "Apply resizing and transformations to TRAIN set while only resizing images in TEST and VALIDATION sets "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96b86b74",
+   "id": "64b5566d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for path in [TRAIN_PATH, TEST_PATH, VAL_PATH]:\n",
+    "    train_images = [file for file in os.listdir(path) if re.match(r'.*\\.(jpg|jpeg|png)', file)]\n",
+    "    \n",
+    "    aug_path = os.path.join(path, 'aug')\n",
+    "    if not os.path.exists(aug_path):\n",
+    "        os.mkdir(aug_path)\n",
+    "\n",
+    "    for train_image_name in train_images:\n",
+    "        new_image_name = train_image_name.split(\".\")[0]\n",
+    "\n",
+    "        # Read image data\n",
+    "        train_img = cv2.imread(os.path.join(path, train_image_name))\n",
+    "        train_img = cv2.cvtColor(train_img, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "        # Read annotation\n",
+    "        coords, label, w, h  = get_label(os.path.join(path, f\"{new_image_name}.json\"))\n",
+    "        \n",
+    "        if path != TRAIN_PATH:\n",
+    "            augment_image(resize_image, new_image_name, train_img, coords, label)\n",
+    "        else:\n",
+    "            for x in range(1, 41):\n",
+    "                augment_image(resize_transform_image, f\"{new_image_name}_{x}\", train_img, coords, label)"
+   ]
   }
  ],
  "metadata": {
