Prepare EfficientDet baseline evaluation

--- a/02_augmentation.ipynb
+++ b/02_augmentation.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "id": "b8cccfb8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import xml.etree.ElementTree as ET\n",
     "import albumentations as A\n",
-    "import os, shutil\n",
+    "import os, shutil, re, json\n",
     "import numpy as np\n",
     "import cv2\n",
     "from matplotlib import pyplot as plt"
@@ -191,8 +191,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "58d2a25f",
+   "execution_count": 35,
+   "id": "dc1d6668",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3160b5f",
+   "id": "c895aff2",
    "metadata": {},
    "source": [
     "### Test augmentation on single image"
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bb6a016",
+   "id": "1a190eef",
    "metadata": {},
    "source": [
     "### Partition data into train, test, val set"
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e1fad44",
+   "id": "5ad8594b",
    "metadata": {},
    "source": [
     "### Augment both images and labels\n",
@@ -323,8 +323,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "64b5566d",
+   "execution_count": 38,
+   "id": "4d959e36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
     "        train_img = cv2.cvtColor(train_img, cv2.COLOR_BGR2RGB)\n",
     "\n",
     "        # Read annotation\n",
-    "        coords, label, w, h  = get_label(os.path.join(path, f\"{new_image_name}.json\"))\n",
+    "        coords, label, w, h  = get_annotation(os.path.join(path, f\"{new_image_name}.xml\"))\n",
     "        \n",
     "        if path != TRAIN_PATH:\n",
     "            augment_image(resize_image, new_image_name, train_img, coords, label)\n",
@@ -351,6 +351,14 @@
     "            for x in range(1, 41):\n",
     "                augment_image(resize_transform_image, f\"{new_image_name}_{x}\", train_img, coords, label)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32dd2feb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
