--- a/02_augmentation.ipynb
+++ b/02_augmentation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "b8cccfb8",
    "metadata": {},
    "outputs": [],
@@ -27,12 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "c0599060",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = \"DataCollection\"\n",
+    "DATA_PATH = os.path.abspath(os.path.join(\"../../..\", \"Seafile\", \"Detecting-Objects\", \"DataCollection\"))\n",
     "IMAGE_PATH = os.path.join(DATA_PATH, \"images\")\n",
     "LABEL_PATH = os.path.join(DATA_PATH, \"labels\")\n",
     "\n",
@@ -151,17 +151,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "519e0b3b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "WIDTH, HEIGHT = 640, 640\n",
+    "\n",
     "# create resize transform pipeline\n",
     "transform = A.Compose([\n",
-    "    A.Resize(height=224, width=224, always_apply=True),\n",
+    "    A.Resize(width=WIDTH, height=HEIGHT, always_apply=True),\n",
     "    A.HorizontalFlip(p=0.5),\n",
     "    A.RandomRotate90(p=0.25),\n",
     "    A.RandomBrightnessContrast(p=0.2),\n",
+    "    A.LongestMaxSize(max_size=WIDTH, interpolation=1),\n",
+    "    A.PadIfNeeded(min_height=WIDTH, min_width=WIDTH, border_mode=0, value=(0,0,0))\n",
     "], bbox_params=A.BboxParams(format='pascal_voc', label_fields=['class_labels']))\n",
     "\n",
     "# Resize and transform image (i.e. rotate, brightness)\n",
@@ -180,7 +184,7 @@
     "\n",
     "\n",
     "resize_transform = A.Compose([\n",
-    "    A.Resize(height=224, width=224, always_apply=True),\n",
+    "     A.Resize(width=WIDTH, height=HEIGHT, always_apply=True),\n",
     "], bbox_params=A.BboxParams(format='pascal_voc', label_fields=['class_labels']))\n",
     "\n",
     "# Resize image without additional transformations\n",
@@ -191,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "dc1d6668",
    "metadata": {},
    "outputs": [],
@@ -270,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "27b6d100",
    "metadata": {},
    "outputs": [],
@@ -284,7 +288,7 @@
     "            continue\n",
     "        \n",
     "        # Read images and labels from directory\n",
-    "        images = [image for image in os.listdir(os.path.join(IMAGE_PATH, folder)) if not image.startswith('.')]\n",
+    "        images = [image for image in os.listdir(os.path.join(IMAGE_PATH, folder, 'rgb')) if not image.startswith('.')]\n",
     "        labels = [label for label in os.listdir(os.path.join(LABEL_PATH, folder)) if not label.startswith('.')]\n",
     "        \n",
     "        # Split into train test validation set. From: https://datascience.stackexchange.com/a/53161\n",
@@ -298,18 +302,18 @@
     "        \n",
     "        # Copy files and labels to train, test, val folders\n",
     "        for file_name in X_train:\n",
-    "            shutil.copy(os.path.join(IMAGE_PATH, folder, file_name), TRAIN_PATH)\n",
+    "            shutil.copy(os.path.join(IMAGE_PATH, folder, 'rgb', file_name), TRAIN_PATH)\n",
     "            shutil.copy(os.path.join(LABEL_PATH, folder, f\"{file_name.split('.')[0]}.xml\"), TRAIN_PATH)\n",
     "            \n",
     "        for file_name in X_test:\n",
-    "            shutil.copy(os.path.join(IMAGE_PATH, folder, file_name), TEST_PATH)\n",
+    "            shutil.copy(os.path.join(IMAGE_PATH, folder, 'rgb', file_name), TEST_PATH)\n",
     "            shutil.copy(os.path.join(LABEL_PATH, folder, f\"{file_name.split('.')[0]}.xml\"), TEST_PATH)\n",
     "            \n",
     "        for file_name in X_val:\n",
-    "            shutil.copy(os.path.join(IMAGE_PATH, folder, file_name), VAL_PATH)\n",
+    "            shutil.copy(os.path.join(IMAGE_PATH, folder, 'rgb', file_name), VAL_PATH)\n",
     "            shutil.copy(os.path.join(LABEL_PATH, folder, f\"{file_name.split('.')[0]}.xml\"), VAL_PATH)\n",
     "            \n",
-    "#create_partition(IMAGE_PATH)"
+    "create_partition(IMAGE_PATH)"
    ]
   },
   {
