Add preview image
Also only saves image when detection was successful

--- a/02-Image-Annotation/02_annotate_images_using_depth_map.ipynb
+++ b/02-Image-Annotation/02_annotate_images_using_depth_map.ipynb
@@ -143,7 +143,7 @@
     "\n",
     "    # Mask used to flood filling.\n",
     "    # Notice the size needs to be 2 pixels than the image.\n",
-    "    h, w = donut_image.shape[:2]\n",
+    "    h, w = dilate.shape[:2]\n",
     "    mask = np.zeros((h+2, w+2), np.uint8)\n",
     "\n",
     "    # Floodfill from point (0, 0)\n",
@@ -475,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
